<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".AuthorList">

    <item android:id="@+id/showBookAuthorItem_a"
        android:title="@string/menuitem_show_book_author"
        android:orderInCategory="1"
        android:icon="@android:drawable/ic_menu_info_details" />
    <item android:id="@+id/showAuthorsItem_a"
        android:title="@string/menuitem_show_authors"
        android:orderInCategory="2"
        android:icon="@android:drawable/ic_menu_info_details"/>
    <item android:id="@+id/showBooksItem_a"
        android:title="@string/menuitem_show_books"
        android:orderInCategory="3"
        android:icon="@android:drawable/ic_menu_info_details"/>
    <item android:id="@+id/addAuthorItem_a"
        android:title="@string/menuitem_add_author"
        android:orderInCategory="4"
        android:icon="@android:drawable/ic_menu_add"/>
    <item android:id="@+id/addBookItem_a"
        android:title="@string/menuitem_add_book"
        android:orderInCategory="5"
        android:icon="@android:drawable/ic_menu_add"/>

</menu>
