<?xml version="1.0" encoding="utf-8"?>

   <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_weight="1">

    <LinearLayout android:id="@+id/linearLayout"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent" android:padding="5dp">

        <EditText android:id="@+id/isbnEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext" android:hint="@string/hint_isbn"
            android:paddingTop="20dp" android:layout_weight="1"/>

        <EditText android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext" android:hint="@string/hint_title"
            android:inputType="textPersonName|textCapWords" android:paddingTop="20dp"
            android:layout_weight="1"/>

        <EditText android:id="@+id/editionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext" android:hint="@string/hint_edition"
            android:paddingTop="20dp"/>

        <EditText android:id="@+id/yearPublishedEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext" android:hint="@string/hint_year_published"
            android:inputType="number" android:paddingTop="20dp"/>

        <Button android:id="@+id/saveBookButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/button_save_book"/>

    </LinearLayout>

   </ScrollView>
