<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:layout_weight="1">
<LinearLayout android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:padding="5dp"
    android:orientation="vertical">

    <EditText android:id="@+id/firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext" android:hint="@string/hint_first_name"
        android:inputType="textPersonName|textCapWords" android:paddingTop="20dp"
        android:layout_weight="1" />

    <EditText android:id="@+id/lastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext" android:hint="@string/hint_last_name"
        android:inputType="textPersonName|textCapWords" android:paddingTop="20dp"
        android:layout_weight="1" />

    <Button android:id="@+id/saveAuthorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/button_save_author"
        android:layout_weight="1" />

</LinearLayout>

</ScrollView>