<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:layout_weight="1">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" android:layout_margin="5dp">

        <TableRow android:id="@+id/isbnTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">
            <TextView android:id="@+id/isbnLabelTextView"
                style="@style/BookAuthorLabelTextView"
                android:text="@string/label_isbn"/>
            <TextView android:id="@+id/isbnTextView"
                style="@style/BookAuthorTextView"/>
        </TableRow>

        <TableRow android:id="@+id/titleTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">
            <TextView android:id="@+id/titleLabelTextView"
                style="@style/BookAuthorLabelTextView"
                android:text="@string/label_title"/>
            <TextView android:id="@+id/titleTextView"
                style="@style/BookAuthorTextView"/>
        </TableRow>

        <TableRow android:id="@+id/editionTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">
            <TextView android:id="@+id/editionLabelTextView"
                style="@style/BookAuthorLabelTextView"
                android:text="@string/label_edition"/>
            <TextView android:id="@+id/editionTextView"
                style="@style/BookAuthorTextView"/>
        </TableRow>

        <TableRow android:id="@+id/yearPublishedTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">
            <TextView android:id="@+id/yearPublishedLabelTextView"
                style="@style/BookAuthorLabelTextView"
                android:text="@string/label_year_published"/>
            <TextView android:id="@+id/yearPublishedTextView"
                style="@style/BookAuthorTextView"/>
        </TableRow>

    </TableLayout>
</ScrollView>